# multi-chirp

./: .gitignore  README.md  pyproject.toml
building/: PAPER_TODO.md  analysis.ipynb  analysis.py  audio_augmentation.py  audioset.py  dataset.py  dataset_prep.ipynb  download.py  evaluate.py  mel_models.py  results_io.py  scaling.ipynb  scaling.py  scaling_cnn.ipynb  scaling_experiment.py  scaling_mel.ipynb  scaling_time.ipynb  sources.py  task_dataset_build.ipynb  task_train.ipynb  taxonomy.py  time_models.py  training.py  utils.py
building/data/: audioset.py  augmentation.py  dataset.py  download.py  dropbox_download.ipynb  sources.py  taxonomy.py
building/geographic_scale/: __init__.py  dataset_analysis.ipynb  dataset_build.ipynb  dataset_info.py  results.ipynb  train.ipynb
building/geographic_task/: __init__.py  analysis.ipynb  cascading_train.ipynb  dataset_build.ipynb  long_recordings.py  results.ipynb  results.py  results_grouped.ipynb  results_grouped.py  train.ipynb
building/models/: __init__.py  _common.py  bake.py  cnn1d.py  leaf.py  mel_cnn.py  model_eval.py  sincnet.py  squeezenet.py  transformer.py
building/scaling/: __init__.py  dataset_prep.ipynb  runner.py  scaling.ipynb
building/utils/: __init__.py  audio_io.py  constants.py  export.py  mel_spec.py  paths.py  rust_clips.py  tf_config.py
notebooks_thesis/: split-data.py
results/: task_dataset_mel_cnn.json  task_dataset_sincnet.json
results/task_s3_49_2_r50/: cascading_sincnet__mel_cnn.json  cnn1d.json  mel_cnn.json  mel_cnn.npz  sincnet.json  sincnet.npz  squeezenet_mel.json
