[project]
name = "tiny-chirp-microflow-building"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "tensorflow[and-cuda]>=2.10",
  "numpy",
  "librosa",
  "soundfile",
  "ipykernel",
  "jupyter",
  "tensorflow-io[tensorflow]>=0.37.1",
  "keras>=3.13.2",
  "matplotlib>=3.10.8",
  "tqdm>=4.67.3",
  "requests>=2.32",
  "birdnetlib>=0.9",
  "python-dotenv>=1.0",
  "pydantic>=2.0",
  "scikit-learn>=1.4",
  "pandas>=2.0",
  "pyrootutils>=1.0",
  "types-tensorflow>=2.18.0.20260402",
  "resampy>=0.4.3",
  "datasets>=3.0",
  "xenocanto3",
  "folium>=0.16",
  "ebird-api>=4.0.0",
  "audiomentations>=0.43.1",
  "dropbox>=12.0.2",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["building"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
xenocanto3 = { path = "../xenocanto3", editable = true }
